plugins {
    id 'java'
    id 'com.diffplug.spotless' version '8.3.0'
    id 'org.springframework.boot' version '4.1.0-M2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'ru.tbank.practicum'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-webflux")
    implementation("org.springframework.boot:spring-boot-starter-liquibase")
    runtimeOnly("org.postgresql:postgresql:42.7.10")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("jakarta.validation:jakarta.validation-api:4.0.0-M1")
    implementation("org.hibernate.validator:hibernate-validator:9.1.0.Final")
    implementation 'org.mapstruct:mapstruct:1.6.3'
    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.boot:spring-boot-starter-webmvc-test")
    testImplementation("org.testcontainers:testcontainers-junit-jupiter:2.0.4")
    testImplementation("org.testcontainers:testcontainers-postgresql:2.0.4")
    implementation("org.springframework.boot:spring-boot-testcontainers")
    implementation 'org.wiremock.integrations:wiremock-spring-boot:4.0.9'
}


test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco')
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "ru/tbank/practicum/mappers/**",
                    "ru/tbank/practicum/controllers/dto/**",
                    "ru/tbank/practicum/models/**"
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.50
            }
        }
    }
}
check.dependsOn jacocoTestCoverageVerification
// ----- Linter -----

spotless {
    java {
        palantirJavaFormat().formatJavadoc(true)
    }
}

